--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,29 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalDependencies": [
+    "**/.env.*local"
+  ],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        ".next/**",
+        "!.next/cache/**",
+        "dist/**"
+      ],
+      "cache": true
     },
     "lint": {},
     "dev": {
       "cache": false,
       "persistent": true,
-      "dotEnv": [".env.local", ".env.development.local", ".env"]
+      "dotEnv": [
+        ".env.local",
+        ".env.development.local",
+        ".env"
+      ]
     }
   }
 }
