--- a/turbo.json
+++ b/turbo.json
@@ -1,29 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": [
-    "**/.env.*local"
+    "**/.env"
   ],
-  "pipeline": {
-    "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        ".next/**",
-        "!.next/cache/**",
-        "dist/**"
-      ],
-      "cache": true
-    },
-    "lint": {},
-    "dev": {
-      "cache": false,
-      "persistent": true,
-      "dotEnv": [
-        ".env.local",
-        ".env.development.local",
-        ".env"
-      ]
-    }
-  }
+  "tasks": {}
 }
