More improvements to fix turbo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "turbo run dev",
     "build": "turbo run build",
     "start": "next start",
     "lint": "next lint"
