--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,31 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "**/.env"
+  "$schema": "https://turborepo.org/schema.json",
+  "globalEnv": [
+    "NEXT_CI_RUNNER"
   ],
-  "tasks": {}
+  "daemon": false,
+  "tasks": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
+    },
+    "dev": {
+      "dependsOn": [
+        "^dev"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
+    },
+    "lint": {
+      "dependsOn": [
+        "^lint"
+      ]
+    }
+  },
+  "ui": "tui"
 }
