--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "turbo run dev",
-    "build": "turbo run build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -78,7 +78,6 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "turbo": "^1.12.5",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "vscode-languageclient": "^9.0.1",
@@ -89,7 +88,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/vscode": "^1.87.0",
-    "turbo": "^1.12.5"
+    "@types/vscode": "^1.87.0"
   }
 }
