--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "turbo run build",
+    "buildCommand": "next build",
     "installCommand": "npm install",
     "framework": "nextjs"
 }
