--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
-engine-strict=true
+engine-strict=false
 auto-install-peers=true
 node-linker=hoisted
-strict-peer-dependencies=false 
+strict-peer-dependencies=false
+node-version=18.19.1 
