--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.38.0",
-    "@auth/nextjs": "0.0.0-380f8d56",
+    "@auth/nextjs": "^0.8.0",
     "@hookform/resolvers": "^4.1.3",
     "@next/swc-wasm-nodejs": "^15.2.2",
     "@prisma/client": "^6.5.0",
