--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.38.0",
-    "@auth/nextjs": "^0.6.0",
     "@hookform/resolvers": "^4.1.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/swc-wasm-nodejs": "^15.2.2",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -64,6 +62,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.35",
     "prisma": "^6.5.0",
@@ -94,5 +93,9 @@
     "glob": "^11.0.1",
     "inflight": "^1.0.6",
     "rimraf": "^6.0.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts",
+    "build": "prisma db push --accept-data-loss && next build"
   }
 }
