--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Created by Vercel CLI
+DATABASE_URL="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+PGDATABASE="neondb"
+PGHOST="ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech"
+PGHOST_UNPOOLED="ep-hidden-poetry-a223tqpx.eu-central-1.aws.neon.tech"
+PGPASSWORD="npg_KAHBVhp0sZe9"
+PGUSER="neondb_owner"
+POSTGRES_DATABASE="neondb"
+POSTGRES_HOST="ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="npg_KAHBVhp0sZe9"
+POSTGRES_PRISMA_URL="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require"
+POSTGRES_URL="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+POSTGRES_URL_NO_SSL="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech/neondb"
+POSTGRES_USER="neondb_owner"
