Trying to fix still

--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ POSTGRES_URL="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx
 POSTGRES_URL_NON_POOLING="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx.eu-central-1.aws.neon.tech/neondb?sslmode=require"
 POSTGRES_URL_NO_SSL="postgres://neondb_owner:npg_KAHBVhp0sZe9@ep-hidden-poetry-a223tqpx-pooler.eu-central-1.aws.neon.tech/neondb"
 POSTGRES_USER="neondb_owner"
+
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+NEXTAUTH_SECRET=your_nextauth_secret
+NEXTAUTH_URL=http://localhost:3000 # for local development
