--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "cursorai-analysis",
+  "name": "aiclarify",
   "version": "0.1.0",
   "private": true,
   "workspaces": [
-    "apps/*",
     "packages/*"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 5000",
+    "lint": "next lint",
+    "clean": "rimraf dist packages/*/dist",
+    "publish": "bash scripts/publish.sh",
+    "build:all": "npm run build --workspaces",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
-    "@next/swc-wasm-nodejs": "^15.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -42,15 +44,10 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@sentry/nextjs": "^9.5.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/vscode": "^1.98.0",
-    "@upstash/redis": "^1.34.5",
-    "@vscode/vsce": "^3.2.2",
     "autoprefixer": "^10.4.21",
-    "bullmq": "^5.43.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -63,7 +60,6 @@
     "next": "^14.1.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.35",
-    "prisma": "^6.5.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.2",
     "react-dom": "^18.2.0",
@@ -71,30 +67,17 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
-    "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2",
     "vaul": "^1.1.2",
-    "vscode-languageclient": "^9.0.1",
-    "vscode-languageserver": "^9.0.1",
-    "vscode-languageserver-textdocument": "^1.0.12",
-    "vscode-uri": "^3.1.0",
-    "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@prisma/client": "^6.5.0",
-    "@humanwhocodes/config-array": "^0.13.0",
-    "@humanwhocodes/object-schema": "^2.0.3",
-    "@types/vscode": "^1.87.0",
-    "glob": "^11.0.1",
-    "inflight": "^1.0.6",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "rimraf": "^6.0.1"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts",
-    "build": "prisma db push --accept-data-loss && next build"
   }
 }
