--- a/package.json
+++ b/package.json
@@ -1,82 +1,56 @@
 {
   "name": "aiclarify",
   "version": "0.2.5",
-  "workspaces": [
-    "packages/*"
-  ],
+  "description": "Real-time code quality analysis tool",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": {
+    "aiclarify": "./dist/app/helpers/cli.js"
+  },
   "scripts": {
     "dev": "next dev -p 5000",
-    "build": "next build",
+    "build": "next build && tsc",
     "start": "next start -p 5000",
     "lint": "next lint",
-    "clean": "rimraf dist packages/*/dist",
-    "publish": "bash scripts/publish.sh",
-    "build:all": "npm run build --workspaces",
+    "clean": "rimraf dist .next",
     "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-toggle-group": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "^15.2.2",
-    "input-otp": "^1.4.2",
+    "commander": "^11.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "lucide-react": "^0.479.0",
     "next": "^14.1.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
-    "react-day-picker": "^9.6.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.54.2",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.1",
+    "socket.io": "^4.7.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.8.2",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.24",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
-    "rimraf": "^6.0.1"
+    "typescript": "^5.3.3"
   }
 }
